--- a/actividadClase2/styles/index.css
+++ b/actividadClase2/styles/index.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 :root{
     /* paleta de colores */
     --colorFondo:#D8C37F;
@@ -18,18 +19,18 @@
     --textContent:'Quito', sans-serif;
 }
 
+@import url('https://fonts.cdnfonts.com/css/ysabeau-sc');
+@import url('https://fonts.cdnfonts.com/css/quito');
+
 body{
     background-color: var(--colorFondo);
-    width: 100vw;
+    width: 100%;
     height: auto;
-    overflow-x: hidden;
 }
 
 header{
     width: 100%;
     height: 100px;
-    border: solid red;
-    background-color: var(--colorEnfasis3);
 }
 
 .menuNav{
@@ -37,12 +38,94 @@ header{
     height: 100px;
     background-color: var(--colorEnfasis3);
     position: fixed;
-    top: 0;
-    right: 0;
+    top: 0%;
+    left: 0%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
+.logo{
+    height: 100%;
+}
+
+.logo a{
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;  
+    align-items: center;
+    gap: 20px;
+    font-family: var(--textContent);
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.img-logo{
+    height: 100%;
+}
+
+.p-logo{
+    width: 150px;
+    text-align: left; 
+}
+
+.span-logo{
+    color: var(--colorEnfasis1);
+}
+
+.listaMenu{
+    display: flex;
+    gap: 80px;
+    list-style: none;
+    align-items: center;
+    font-size: 18px;
+}
+
+a{
+    /* list-style: none; */
+    text-decoration: none;
+    color: var(--colorFondo);
+    font-family: var(--textContent);    
+    /* border: solid green;  */
+}
+
+.listaMenu a:hover{
+    color: var(--colorEnfasis1);
 }
 
 
+footer{
+    background-color: var(--colorEnfasis3);
+    height: 100px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--colorText);
+    font-family: var(--textContent);
+    font-size: 20px;
+}
 
 main{
+    border: solid wheat 5px;
+    width: 100%;
+    padding: 100px;
+}
 
+.contenedor-principal{
+    /* border: solid red 5px; */
+    font-family: var(--textContent);
+}
+
+.contenedor-principal h1{
+    font-family: var(--textTitle);
+    font-size: 40px;
+    color: var(--colorEnfasis3);
+}
+
+.contenedor-imagenes{
+    border: solid var(--colorEnfasis3) 5px;
+    border-radius: 30px;
+    margin-top: 40px;
 }
