--- a/actividadClase2/styles/index.css
+++ b/actividadClase2/styles/index.css
@@ -1,9 +1,12 @@
+
+@import url('https://fonts.cdnfonts.com/css/ysabeau-sc');
+@import url('https://fonts.cdnfonts.com/css/quito');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
 
 :root{
     /* paleta de colores */
@@ -18,9 +21,6 @@
     --textTitle:'Ysabeau SC', sans-serif;
     --textContent:'Quito', sans-serif;
 }
-
-@import url('https://fonts.cdnfonts.com/css/ysabeau-sc');
-@import url('https://fonts.cdnfonts.com/css/quito');
 
 body{
     background-color: var(--colorFondo);
@@ -43,6 +43,7 @@ header{
     display: flex;
     justify-content: space-between;
     padding: 0 20px;
+    z-index: 100;
 }
 
 .logo{
@@ -66,7 +67,7 @@ header{
 }
 
 .p-logo{
-    width: 150px;
+    width: 140px;
     text-align: left; 
 }
 
@@ -83,17 +84,14 @@ header{
 }
 
 a{
-    /* list-style: none; */
     text-decoration: none;
     color: var(--colorFondo);
     font-family: var(--textContent);    
-    /* border: solid green;  */
 }
 
 .listaMenu a:hover{
     color: var(--colorEnfasis1);
 }
-
 
 footer{
     background-color: var(--colorEnfasis3);
@@ -108,9 +106,9 @@ footer{
 }
 
 main{
-    border: solid wheat 5px;
     width: 100%;
     padding: 100px;
+    padding-top: 40px;
 }
 
 .contenedor-principal{
@@ -124,8 +122,59 @@ main{
     color: var(--colorEnfasis3);
 }
 
-.contenedor-imagenes{
+.contenedorImagenes{
     border: solid var(--colorEnfasis3) 5px;
     border-radius: 30px;
-    margin-top: 40px;
+    margin-top: 30px;
+    overflow: hidden; 
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.contenedorImagenes img{
+    width: 100%;
+}
+
+.imagenes{
+    display: grid;
+    position: relative;
+}
+
+.img1{
+   grid-row: 1/3; 
+   grid-column: 4/5;
+}
+
+.img2{
+    grid-row: 1/2; 
+    grid-column: 2/4;
+}
+
+.img3{
+    grid-row: 1/3; 
+    grid-column: 1/2;
+}
+
+.img4{
+    grid-row: 2/3; 
+    grid-column: 3/4;
+}
+
+.parrafo-img{
+    position: absolute;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    color: var(--colorEnfasis3);
+    opacity: 0;
+    background-color: #a0a287;
+}
+
+.parrafo-img:hover{
+    opacity: 0.4;
+    cursor: pointer;
 }
