--- a/actividadClase2/styles/index.css
+++ b/actividadClase2/styles/index.css
@@ -134,6 +134,7 @@ main{
 
 .contenedorImagenes img{
     width: 100%;
+    height: 100%;
 }
 
 .imagenes{
@@ -171,10 +172,10 @@ main{
     padding: 20px;
     color: var(--colorEnfasis3);
     opacity: 0;
-    background-color: #a0a287;
+    background-color: #a0a2877c;
 }
 
 .parrafo-img:hover{
-    opacity: 0.4;
+    opacity: 1;
     cursor: pointer;
 }
